--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
+!**/src/main/**/resources/
 !**/src/test/**/target/
+
 
 ### STS ###
 .apt_generated
